syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alibaba.sls.demo.grpc.helloworld";

package helloworld;

service StreamingGreeter {
  rpc SayHelloStreaming (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}